Create dataset on the fly

--- a/.env
+++ b/.env
@@ -7,7 +7,8 @@ DEAD_LETTER_TOPIC_ID=dead-letter
 SUBSCRIBER_ID=url-distribution
 
 # BigQuery Configuration
-STATUS_TABLE_ID=urls.cool_links
+STATUS_DATASET=urls
+STATUS_TABLE_ID=$STATUS_DATASET.links
 DATA_TABLE_ID=mining.scielo
 
 # GKE Configuration
