Add status table id

--- a/.env
+++ b/.env
@@ -8,7 +8,7 @@ SUBSCRIBER_ID=url-distribution
 
 # BigQuery Configuration
 STATUS_DATASET=urls
-STATUS_TABLE_ID=$STATUS_DATASET.links
+STATUS_TABLE_ID=urls.links
 DATA_TABLE_ID=mining.scielo
 
 # GKE Configuration
